--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@angular/platform-browser": "^10.0.9",
     "@angular/platform-browser-dynamic": "^10.0.9",
     "@angular/router": "^10.0.9",
+    "@popperjs/core": "^2.11.6",
+    "bootstrap": "^5.2.3",
     "rxjs": "^6.6.2",
     "tslib": "^2.0.1",
     "zone.js": "^0.10.3"
